--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ rvm:
 matrix:
   allow_failures:
     - rvm: ruby-head
+    - gemfile: gemfiles/rails_5.2_rc1.gemfile
 gemfile:
   - Gemfile
   - gemfiles/rails_4.1_stable.gemfile
