rails 4.1 doesn't work with ruby 2.4+

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ matrix:
   allow_failures:
     - rvm: ruby-head
     - gemfile: gemfiles/rails_5.2_rc1.gemfile
+    - rvm: 2.4.3
+      gemfile: gemfiles/rails_4.1_stable.gemfile
+    - rvm: 2.5.0
+      gemfile: gemfiles/rails_4.1_stable.gemfile
 gemfile:
   - gemfiles/rails_4.1_stable.gemfile
   - gemfiles/rails_4.2_stable.gemfile
