--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ gemfile:
   - gemfiles/rails_4.2_stable.gemfile
   - gemfiles/rails_5.0_stable.gemfile
   - gemfiles/rails_5.1_stable.gemfile
-  - gemfiles/rails_5.2_rc1.gemfile
+  - gemfiles/rails_5.2.0.gemfile
