--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-before_install: gem install bundler && bundler -v
+before_install: gem install bundler && bundle -v
 install: bundle install --jobs=3 --retry=3
 before_script: bundle install
 script: bundle exec rake
