--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,37 +1,63 @@
-version: "2"         # required to adjust maintainability checks
+version: "2"
 checks:
   argument-count:
+    enabled: true
     config:
       threshold: 4
   complex-logic:
+    enabled: true
     config:
       threshold: 4
   file-lines:
+    enabled: true
     config:
       threshold: 250
   method-complexity:
+    enabled: true
     config:
       threshold: 5
   method-count:
+    enabled: true
     config:
       threshold: 20
   method-lines:
+    enabled: true
     config:
       threshold: 25
   nested-control-flow:
+    enabled: true
     config:
       threshold: 4
   return-statements:
+    enabled: true
     config:
       threshold: 4
   similar-code:
+    enabled: true
     config:
-      threshold: # language-specific defaults. an override will affect all languages.
+      threshold: #language-specific defaults. overrides affect all languages.
   identical-code:
+    enabled: true
     config:
-      threshold: # language-specific defaults. an override will affect all languages.
-  plugins:
-    rubocop:
-      enabled: true
-      channel: rubocop-0-58
-      
+      threshold: #language-specific defaults. overrides affect all languages.
+plugins:
+ rubocop:
+  enabled: true
+  channel: rubocop-0-58
+ markdownlint:
+  enabled: true
+ brakeman:
+  enabled: true
+exclude_patterns:
+- "config/"
+- "db/"
+- "dist/"
+- "features/"
+- "**/node_modules/"
+- "script/"
+- "**/spec/"
+- "**/test/"
+- "**/tests/"
+- "**/vendor/"
+- "**/*.d.ts"
+- "gemfiles/"
