--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ rvm:
 matrix:
   allow_failures:
     - rvm: ruby-head
-    - gemfile: gemfiles/rails_5.2_stable.gemfile
+      gemfile: gemfiles/rails_5.2_stable.gemfile
     - rvm: 2.4.4
       gemfile: gemfiles/rails_4.2_stable.gemfile
     - rvm: 2.5.3
