--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,16 +2,8 @@ AllCops:
   TargetRubyVersion: 2.3
   Include:
     - '**/Rakefile'
-    - '**/config.ru'
-    - 'lib/tasks/**/*'
-  Exclude:
-    - Gemfile*
-    - README
-    - 'db/**/*'
-    - 'config/**/*'
-    - 'bin/**/*'
-    - 'vendor/bundle/**/*'
-    - 'spec/support/**/*' # rspec support helpers have a strange api
+    - 'lib/**/*'
+    - 'app/**/*'
 
 Rails:
   Enabled: true
