--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ rvm:
 matrix:
   allow_failures:
     - rvm: ruby-head
-    - gemfile: gemfiles/rails_5.2_stable.gemfile
+      gemfile: gemfiles/rails_5.2_stable.gemfile
     - rvm: 2.4.5
       gemfile: gemfiles/rails_4.2_stable.gemfile
     - rvm: 2.5.3
