Just allow failures for ruby-head

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,12 @@ rvm:
 matrix:
   allow_failures:
     - rvm: ruby-head
-      gemfile: gemfiles/rails_5.2_stable.gemfile
-    - rvm: 2.4.5
-      gemfile: gemfiles/rails_4.2_stable.gemfile
-    - rvm: 2.5.3
-      gemfile: gemfiles/rails_4.2_stable.gemfile
-    - rvm: 2.6.0
-      gemfile: gemfiles/rails_4.2_stable.gemfile
+    # - rvm: 2.4.5
+    #   gemfile: gemfiles/rails_4.2_stable.gemfile
+    # - rvm: 2.5.3
+    #   gemfile: gemfiles/rails_4.2_stable.gemfile
+    # - rvm: 2.6.0
+    #   gemfile: gemfiles/rails_4.2_stable.gemfile
 gemfile:
   - gemfiles/rails_4.2_stable.gemfile
   - gemfiles/rails_5.0_stable.gemfile
