--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,16 @@ install: bundle install --jobs=3 --retry=3
 before_script: bundle install
 script: bundle exec rake
 rvm:
-  - 2.3.8
-  - 2.4.5
-  - 2.5.3
-  - 2.6.0
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
   - ruby-head
 matrix:
   allow_failures:
     - rvm: ruby-head
-    # - rvm: 2.4.5
-    #   gemfile: gemfiles/rails_4.2_stable.gemfile
-    # - rvm: 2.5.3
-    #   gemfile: gemfiles/rails_4.2_stable.gemfile
-    # - rvm: 2.6.0
-    #   gemfile: gemfiles/rails_4.2_stable.gemfile
+    - rvm: 2.6
+      gemfile: gemfiles/rails_4.2_stable.gemfile
 gemfile:
   - gemfiles/rails_4.2_stable.gemfile
   - gemfiles/rails_5.0_stable.gemfile
