--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
-before_install: gem install bundler -v '< 2'
-install: bundle install --jobs=3 --retry=3
+before_install: gem install bundler -v '1.17.3'
+install: bundle _1.17.3_ install --jobs=3 --retry=3
 script: bundle exec rake
 rvm:
   - 2.3
