--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,17 @@
 language: ruby
-before_install: gem install bundler && bundle -v
-install: bundle install --jobs=3 --retry=3
-before_script: bundle install
+before_install: gem install bundler -v '1.17.3'
+install: bundle _1.17.3_ install --jobs=3 --retry=3
 script: bundle exec rake
 rvm:
-  - 2.3.8
-  - 2.4.5
-  - 2.5.3
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
   - ruby-head
 matrix:
   allow_failures:
     - rvm: ruby-head
-    - gemfile: gemfiles/rails_5.2_stable.gemfile
-    - rvm: 2.4.4
-      gemfile: gemfiles/rails_4.2_stable.gemfile
-    - rvm: 2.5.3
+    - rvm: 2.6
       gemfile: gemfiles/rails_4.2_stable.gemfile
 gemfile:
   - gemfiles/rails_4.2_stable.gemfile
