--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,13 @@ matrix:
     - rvm: ruby-head
     - rvm: 2.6
       gemfile: gemfiles/rails_4.2_stable.gemfile
+    - rvm: 2.3
+      gemfile: gemfiles/rails_6.0.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/rails_6.0.gemfile
 gemfile:
   - gemfiles/rails_4.2_stable.gemfile
   - gemfiles/rails_5.0_stable.gemfile
   - gemfiles/rails_5.1_stable.gemfile
   - gemfiles/rails_5.2_stable.gemfile
+  - gemfiles/rails_6.0.gemfile
