--- a/test/dummy/config/mongoid.yml
+++ b/test/dummy/config/mongoid.yml
@@ -3,4 +3,4 @@ test:
     default:
       database: devise_security_test
       hosts:
-        - localhost:<%= ENV['MONGODB_PORT'] || '27017' %>
+        - localhost: <%= ENV.fetch('MONGODB_PORT', '27017') %>
