--- a/test/support/mongoid.yml
+++ b/test/support/mongoid.yml
@@ -3,4 +3,4 @@ test:
     default:
       database: devise-test-suite
       hosts:
-        - localhost:<%= ENV['MONGODB_PORT'] || '27017' %>
+        - localhost:<%= ENV.fetch('MONGODB_PORT', '27017') %>
