--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,15 @@ matrix:
   exclude:
     # Skip these combinations because they have incompatible dependencies
     # and will always fail.
-    - rvm: 2.3
-      gemfile: gemfiles/rails_6.0.gemfile
-    - rvm: 2.4
-      gemfile: gemfiles/rails_6.0.gemfile
     - rvm: 2.6
       gemfile: gemfiles/rails_4.2_stable.gemfile
   allow_failures:
     - rvm: ruby-head
+    - gemfile: gemfiles/rails_6.0_beta.gemfile
 
 gemfile:
   - gemfiles/rails_4.2_stable.gemfile
   - gemfiles/rails_5.0_stable.gemfile
   - gemfiles/rails_5.1_stable.gemfile
   - gemfiles/rails_5.2_stable.gemfile
-  - gemfiles/rails_6.0.gemfile
+  - gemfiles/rails_6.0_beta.gemfile
