exclude some builds that can't ever pass

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,12 @@ matrix:
     # and will always fail.
     - rvm: 2.6
       gemfile: gemfiles/rails_4.2_stable.gemfile
+    - rvm: ruby-head
+      gemfile: gemfiles/rails_4.2_stable.gemfile
+    - rvm: 2.3
+      gemfile: gemfiles/rails_6.0_beta.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/rails_6.0_beta.gemfile
   allow_failures:
     - rvm: ruby-head
     - gemfile: gemfiles/rails_6.0_beta.gemfile
