--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,23 @@ rvm:
   - 2.6
   - ruby-head
 matrix:
-  allow_failures:
-    - rvm: ruby-head
+  exclude:
+    # Skip these combinations because they have incompatible dependencies
+    # and will always fail.
     - rvm: 2.6
       gemfile: gemfiles/rails_4.2_stable.gemfile
+    - rvm: ruby-head
+      gemfile: gemfiles/rails_4.2_stable.gemfile
     - rvm: 2.3
-      gemfile: gemfiles/rails_6.0.gemfile
+      gemfile: gemfiles/rails_6.0_beta.gemfile
     - rvm: 2.4
-      gemfile: gemfiles/rails_6.0.gemfile
+      gemfile: gemfiles/rails_6.0_beta.gemfile
+  allow_failures:
+    - rvm: ruby-head
+    - gemfile: gemfiles/rails_6.0_beta.gemfile
 gemfile:
   - gemfiles/rails_4.2_stable.gemfile
   - gemfiles/rails_5.0_stable.gemfile
   - gemfiles/rails_5.1_stable.gemfile
   - gemfiles/rails_5.2_stable.gemfile
-  - gemfiles/rails_6.0.gemfile
+  - gemfiles/rails_6.0_beta.gemfile
