--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
-before_install: gem install bundler -v '1.17.3'
-install: bundle _1.17.3_ install --jobs=3 --retry=3
+before_install: gem install bundler -v '1.17.2'
+install: bundle _1.17.2_ install --jobs=2 --retry=2 --path=${BUNDLE_PATH:-vendor/bundle}
+cache: bundler
 script: bundle exec rake
 rvm:
   - 2.3
