--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: xenial
 before_install:
   # install bundler < 2 because Rails 4.2 is incompatible with bundler >= 2
   - gem install bundler -v '1.17.3'
-# install: bundle _1.17.3_ install --jobs=2 --retry=2 --path=${BUNDLE_PATH:-vendor/bundle}
+install: bundle _1.17.3_ install --jobs=2 --retry=2 --path=${BUNDLE_PATH:-vendor/bundle}
 cache: bundler
 script: bundle exec rake
 rvm:
@@ -13,8 +13,6 @@ rvm:
   - 2.6
   - ruby-head
 env:
-  global:
-    - BUNDLER_VERSION=1.17.3
   matrix:
     - DEVISE_ORM=active_record
     - DEVISE_ORM=mongoid
