Don't check in appraisal-generated gemfiles.
Generate them every time the build runs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ dist: xenial
 before_install:
   # install bundler < 2 because Rails 4.2 is incompatible with bundler >= 2
   - gem install bundler -v '1.17.3'
+  - gem install appraisal
+  - bundle exec appraisal generate
 install: bundle _1.17.3_ install --jobs=2 --retry=2 --path=${BUNDLE_PATH:-vendor/bundle}
 cache: bundler
 script: bundle exec rake
