--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+inherit_from: .rubocop_todo.yml
+
 require:
   - rubocop-rails
 AllCops:
@@ -15,11 +17,14 @@ Rails:
 Metrics/MethodLength:
   Enabled: false
 
-Metrics/LineLength:
+Layout/LineLength:
   Enabled: false
 
 Naming/FileName:
-  Exclude: ["devise-security.gemspec"]
+  Exclude:
+    - "devise-security.gemspec"
+    - 'lib/devise-security.rb'
+    - 'lib/generators/templates/devise-security.rb'
 
 Style/ClassAndModuleChildren:
   EnforcedStyle: compact
@@ -56,3 +61,30 @@ Style/AndOr:
   # or completely (always).
   # They read better, more like normal English.
   Enabled: false
+
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
+Style/ExponentialNotation:
+  Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
+Style/SlicingWithRange:
+  Enabled: true
