--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,7 +15,7 @@ Rails:
 Metrics/MethodLength:
   Enabled: false
 
-Metrics/LineLength:
+Layout/LineLength:
   Enabled: false
 
 Naming/FileName:
@@ -56,3 +56,12 @@ Style/AndOr:
   # or completely (always).
   # They read better, more like normal English.
   Enabled: false
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
