--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,13 @@ matrix:
   allow_failures:
     # edge, not expected to pass
     - rvm: ruby-head
+    # not supported officially, might cause random failures
+    - rvm: 2.7
+      gemfile: gemfiles/rails_5.0.gemfile
+    - rvm: 2.7
+      gemfile: gemfiles/rails_5.1.gemfile
+    - rvm: 2.7
+      gemfile: gemfiles/rails_5.2.gemfile
 gemfile:
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
