--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        orm: [active_record, mongoid]
         ruby: [2.5, 2.6, 2.7, head]
 
     steps:
@@ -21,3 +22,5 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
     - run: bundle install
     - run: bundle exec rake
+      env:
+        DEVISE_ORM: ${{ matrix.orm }}
