--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
       with:
+        bundler-cache: true
         ruby-version: ${{ matrix.ruby }}
     - run: bundle install
     - run: bundle exec rake
