--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,10 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
       with:
-        bundler-cache: true
         ruby-version: ${{ matrix.ruby }}
     - run: bundle install
+    - name: Start MongoDB v${{ matrix.node-version }}
+      uses: superchargejs/mongodb-github-action@1.0.0
     - run: bundle exec rake
       env:
         DEVISE_ORM: ${{ matrix.orm }}
