--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Bundle Install
       env:
         RAILS_VERSION: ${{ matrix.rails }}
+        BUNDLE_GEMFILE: "${GITHUB_WORKSPACE}/gemfiles/rails_${RAILS_VERSION}.gemfile"
       run: |
-        export BUNDLE_GEMFILE="${GITHUB_WORKSPACE}/gemfiles/rails_${RAILS_VERSION}.gemfile"
         gem uninstall -aIx bundler
         gem install bundler -v 1.17.3
         bundle install --jobs 4 --retry 3
