--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         orm: [active_record] #, mongoid]
         rails: [4.2] #, 5.0, 5.1, 5.2, 6.0]
-        ruby: [2.5] #, 2.6, 2.7]
+        ruby: [2.5, 2.6, 2.7]
 
     steps:
     - uses: actions/checkout@v2
