--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
       fail-fast: false
       matrix:
         orm: [active_record] #, mongoid]
-        rails: [4.2] #, 5.0, 5.1, 5.2, 6.0]
+        # rails: [4.2, 5.0, 5.1, 5.2, 6.0]
+        rails: [6.0]
         ruby: [2.5, 2.6, 2.7]
 
     steps:
