--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # orm: [active_record] #, mongoid]
-        orm: [active_record, mongoid]
-        # rails: [4.2, 5.0, 5.1, 5.2, 6.0]
+        orm: [active_record] #, mongoid]
+        # orm: [active_record, mongoid]
         rails: [5.2]
-        ruby: [2.5, 2.6, 2.7]
+        # rails: [4.2, 5.0, 5.1, 5.2, 6.0]
+        ruby: [2.5] #, 2.6, 2.7]
+        # ruby: [2.5, 2.6, 2.7]
 
     steps:
     - uses: actions/checkout@v2
@@ -24,20 +25,22 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
     - uses: actions/cache@v2
+      env:
+        COOKIE: cat
       with:
         path: vendor/bundle
-        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-cookies-${{ hashFiles('**/gemfiles/rails_5.2.gemfile') }}
-    - name: bundle install
-      env:
-        BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
-      run: |
-        bundle config path vendor/bundle
-        bundle install --jobs 4
-    - name: Tests
-      env:
-        BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
-      run: |
-        bundle exec rake
+        key: ${{ COOKIE }}-bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-cookies-${{ hashFiles('**/gemfiles/rails_5.2.gemfile') }}
+    # - name: bundle install
+    #   env:
+    #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
+    #   run: |
+    #     bundle config path vendor/bundle
+    #     bundle install --jobs 4
+    # - name: Tests
+    #   env:
+    #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
+    #   run: |
+    #     bundle exec rake
     # - name: Start MongoDB
     #   uses: superchargejs/mongodb-github-action@1.0.0
     # - run: bundle exec rake
