--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,9 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
     - uses: actions/cache@v2
-      env:
-        COOKIE: cat
       with:
         path: vendor/bundle
-        key: ${{ COOKIE }}-bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-cookies-${{ hashFiles('**/gemfiles/rails_5.2.gemfile') }}
+        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-cookies-${{ hashFiles('**/gemfiles/rails_${ matrix.rails }.gemfile') }}
     # - name: bundle install
     #   env:
     #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
