--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: vendor/bundle
-        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-cookies-${{ hashFiles('**/gemfiles/rails_${ matrix.rails }.gemfile') }}
+        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-cookies-${{ hashFiles("**/gemfiles/rails_${ matrix.rails }.gemfile") }}
     # - name: bundle install
     #   env:
     #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
