--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
     - uses: actions/cache@v2
       env:
-        COOKIE: cat
+        HASH: hashFiles('**/gemfiles/rails_${{ matrix.rails }}.gemfile')
       with:
         path: vendor/bundle
-        key: ${{ env.COOKIE }}-bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-cookies-${{ hashFiles('**/gemfiles/rails_${ matrix.rails }.gemfile') }}
+        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-${{ env.HASH }}
     # - name: bundle install
     #   env:
     #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
