--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,10 @@ jobs:
     - uses: actions/cache@v2
       env:
         HASH: hashFiles('**/gemfiles/rails_${{ matrix.rails }}.gemfile')
+        HASHPLS: ${{ env.HASH }}
       with:
         path: vendor/bundle
-        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-${{ env.HASH }}
+        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-${{ env.HASHPLS }}
     # - name: bundle install
     #   env:
     #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
