--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,10 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
     - uses: actions/cache@v2
       env:
-        HASH: hashFiles('**/gemfiles/rails_${{ matrix.rails }}.gemfile')
-        HASHPLS: ${{ env.HASH }}
+        RAILS: ${{ matrix.rails }}
       with:
         path: vendor/bundle
-        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-${{ env.HASHPLS }}
+        key: $RAILS-bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-${{ env.HASHPLS }}
     # - name: bundle install
     #   env:
     #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
