--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,9 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
     - uses: actions/cache@v2
-      env:
-        RAILS: ${{ matrix.rails }}
       with:
         path: vendor/bundle
-        key: ${{ RAILS }}-bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-${{ env.HASHPLS }}
+        key: bundle-use-ruby-${{ matrix.orm }}-${{ matrix.rails }}-${{ matrix.ruby }}-${{ hashFiles(format('**/gemfiles/rails_{0}.gemfile', matrix.rails)) }}
     # - name: bundle install
     #   env:
     #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
