--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,18 +27,18 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: vendor/bundle
-        key: bundle-use-ruby-${{ matrix.ruby }}-rails-${{ matrix.rails }}-orm-${{ matrix.orm }}-file-${{ hashFiles(format('**/gemfiles/rails_{0}.gemfile', matrix.rails)) }}
+        key: a-bundle-use-ruby-${{ matrix.ruby }}-rails-${{ matrix.rails }}-orm-${{ matrix.orm }}-file-${{ hashFiles(format('**/gemfiles/rails_{0}.gemfile', matrix.rails)) }}
     - name: bundle install
       env:
         BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
       run: |
         bundle config path vendor/bundle
         bundle install --jobs 4
-    - name: Start MongoDB # TODO if
-      uses: superchargejs/mongodb-github-action@1.0.0
-    - name: Tests
-      env:
-        BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
-        DEVISE_ORM: ${{ matrix.orm }}
-      run: |
-        bundle exec rake
+    # - name: Start MongoDB # TODO if
+    #   uses: superchargejs/mongodb-github-action@1.0.0
+    # - name: Tests
+    #   env:
+    #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
+    #     DEVISE_ORM: ${{ matrix.orm }}
+    #   run: |
+    #     bundle exec rake
