--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,9 @@ jobs:
         bundle install --jobs 4
     # - name: Start MongoDB # TODO if
     #   uses: superchargejs/mongodb-github-action@1.0.0
-    # - name: Tests
-    #   env:
-    #     BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
-    #     DEVISE_ORM: ${{ matrix.orm }}
-    #   run: |
-    #     bundle exec rake
+    - name: Tests
+      env:
+        BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
+        DEVISE_ORM: ${{ matrix.orm }}
+      run: |
+        bundle exec rake
