--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        orm: [active_record] #, mongoid]
-        # orm: [active_record, mongoid]
+        # orm: [active_record] #, mongoid]
+        orm: [active_record, mongoid]
         rails: [5.2]
         # rails: [4.2, 5.0, 5.1, 5.2, 6.0]
         ruby: [2.5, 2.6] #, 2.7]
