--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ jobs:
         orm: [active_record, mongoid]
         # rails: ['5.0']
         rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
-        ruby: [2.5]
+        # ruby: [2.5]
         # ruby: [2.5, 2.6] #, 2.7]
-        # ruby: [2.5, 2.6, 2.7] # TODO head
+        ruby: [2.5, 2.6, 2.7] # TODO head
 
     steps:
     - uses: actions/checkout@v2
