--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
         # ruby: [2.5, 2.6, 2.7] # TODO head
 
     steps:
+    - name: fail?
+      run: |
+        exit 1
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
       with:
@@ -30,13 +33,6 @@ jobs:
         path: |
           **/bundle
         key: a-a-bundle-use-ruby-${{ matrix.ruby }}-rails-${{ matrix.rails }}-orm-${{ matrix.orm }}-gemfile-${{ hashFiles(format('**/gemfiles/rails_{0}.gemfile', matrix.rails)) }}-gemspec-${{ hashFiles('**/devise-security.gemspec') }}
-    - name: Use bundler < 2.0
-      env:
-        BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
-      run: |
-        gem uninstall -aIx bundler
-        gem install bundler -v 1.17.3
-      if: ${{ matrix.rails == '4.2' }}
     - name: bundle install
       env:
         BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
