--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,6 @@ jobs:
         # ruby: [2.5, 2.6, 2.7] # TODO head
 
     steps:
-    - name: fail?
-      run: |
-        exit 0
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
       with:
@@ -39,6 +36,7 @@ jobs:
       run: |
         bundle config path vendor/bundle
         bundle install --jobs 4
+      if: ${{ matrix.rails !== '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.4') }}
     - name: Start MongoDB
       uses: superchargejs/mongodb-github-action@1.0.0
       if: ${{ matrix.orm == 'mongoid' }}
