--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         bundle config path vendor/bundle
         bundle install --jobs 4
-      if: ${{ matrix.rails !== '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.4') }}
+      if: ${{ matrix.rails != '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.4') }}
     - name: Start MongoDB
       uses: superchargejs/mongodb-github-action@1.0.0
       if: ${{ matrix.orm == 'mongoid' }}
