--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        orm: [active_record] #, mongoid]
-        # orm: [active_record, mongoid]
+        # orm: [active_record] #, mongoid]
+        orm: [active_record, mongoid]
         rails: ['4.2']
         # rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
         ruby: [2.7]
@@ -39,7 +39,7 @@ jobs:
       if: ${{ matrix.rails != '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.4') }}
     - name: Start MongoDB
       uses: superchargejs/mongodb-github-action@1.0.0
-      if: ${{ matrix.orm == 'mongoid' }}
+      if: ${{ matrix.orm == 'mongoid' && (matrix.rails != '4.2' || (matrix.rails == '4.2' && matrix.ruby == '2.4')) }}
     - name: Tests
       env:
         BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
