--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,11 @@ jobs:
       matrix:
         # orm: [active_record] #, mongoid]
         orm: [active_record, mongoid]
-        rails: ['4.2']
-        # rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
-        ruby: [2.7]
+        # rails: ['4.2']
+        rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
+        # ruby: [2.7]
         # ruby: [2.5, 2.6] #, 2.7]
-        # ruby: [2.5, 2.6, 2.7] # TODO head
+        ruby: [2.5, 2.6, 2.7] # TODO head
 
     steps:
     - uses: actions/checkout@v2
