--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # orm: [active_record] #, mongoid]
-        orm: [active_record, mongoid]
-        # rails: ['4.2']
-        rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
-        # ruby: [2.7]
+        orm: [active_record] #, mongoid]
+        # orm: [active_record, mongoid]
+        rails: ['4.2']
+        # rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
+        ruby: [2.5]
         # ruby: [2.5, 2.6] #, 2.7]
-        ruby: [2.5, 2.6, 2.7] # TODO head
+        # ruby: [2.5, 2.6, 2.7] # TODO head
 
     steps:
     - uses: actions/checkout@v2
@@ -43,6 +43,7 @@ jobs:
     - name: Tests
       env:
         BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
+        CI: true
         DEVISE_ORM: ${{ matrix.orm }}
       run: |
         bundle exec rake
