--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
         # orm: [active_record] #, mongoid]
         orm: [active_record, mongoid]
         # rails: ['4.2']
-        rails: ['6.0']
-        # rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
-        ruby: ['ruby-head']
+        # rails: ['6.0']
+        rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
+        # ruby: ['ruby-head']
         # ruby: [2.5, 2.6] #, 2.7]
-        # ruby: [2.5, 2.6, 2.7, 'ruby-head'] # TODO head
+        ruby: [2.5, 2.6, 2.7, 'ruby-head'] # TODO head
 
     steps:
     - uses: actions/checkout@v2
