--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # orm: [active_record] #, mongoid]
         orm: [active_record, mongoid]
-        # rails: ['4.2']
-        # rails: ['6.0']
         rails: ['4.2', '5.0', '5.1', '5.2', '6.0']
-        # ruby: ['ruby-head']
-        # ruby: [2.5, 2.6] #, 2.7]
-        ruby: [2.5, 2.6, 2.7, 'ruby-head'] # TODO head
+        ruby: ['2.5', '2.6', '2.7'] # TODO fix repo to work with ruby-head
 
     steps:
     - uses: actions/checkout@v2
@@ -30,7 +25,7 @@ jobs:
       with:
         path: |
           **/bundle
-        key: a-a-bundle-use-ruby-${{ matrix.ruby }}-rails-${{ matrix.rails }}-orm-${{ matrix.orm }}-gemfile-${{ hashFiles(format('**/gemfiles/rails_{0}.gemfile', matrix.rails)) }}-gemspec-${{ hashFiles('**/devise-security.gemspec') }}
+        key: bundle-use-ruby-${{ matrix.ruby }}-rails-${{ matrix.rails }}-orm-${{ matrix.orm }}-gemfile-${{ hashFiles(format('**/gemfiles/rails_{0}.gemfile', matrix.rails)) }}-gemspec-${{ hashFiles('**/devise-security.gemspec') }}
     - name: bundle install
       env:
         BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
