--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ bin/*
 # We do want the CI builds to fail when new dependencies ship breaking changes
 # so don't checkin the lockfiles used for the build.
 gemfiles/*.lock
+
+vendor/
