--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         parallel: true
 
   finish:
-    needs: test
+    needs: testing
     runs-on: ubuntu-latest
     steps:
     - name: Coveralls Finished
